--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Birthday.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
   <title>Happy Birthday card || Learningrobo</title>
 </head>
 <body>
   <div class="card">
-    <img src="https://drive.google.com/file/d/14-KhXol1jk-CPDGqOn55hE2DmyOL_rXx/view?usp=share_link" alt="birthday" class="birthday">
+    <img src="" alt="birthday" class="birthday">
     <div class="text">
       <h1>ಹುಟ್ಟು ಹಬ್ಬದ ಶುಭಾಶಯಗಳು...!</h1>
       <p>ಓ ನನ್ನ ಜೀವದ ಗೆಳತಿ ನಿನಗಿಂದು ಜನುಮ ದಿನ ನಿನ್ನ ಬಾಳಿನ ಎಲ್ಲ ಕ್ಷಣಗಳಲ್ಲೂ ನಿನ್ನ ನೆರಳಾಗಿ ಕಾದು ಜೊತೆಯಾಗಿ ನಡೆಯುವೆನು. 
