--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="" alt="birthday" class="birthday">
+    <img src="Images/null-20221229-WA0005.jpg" alt="birthday" class="birthday">
     <div class="text">
       <h1>ಹುಟ್ಟು ಹಬ್ಬದ ಶುಭಾಶಯಗಳು...!</h1>
       <p>ಓ ನನ್ನ ಜೀವದ ಗೆಳತಿ ನಿನಗಿಂದು ಜನುಮ ದಿನ ನಿನ್ನ ಬಾಳಿನ ಎಲ್ಲ ಕ್ಷಣಗಳಲ್ಲೂ ನಿನ್ನ ನೆರಳಾಗಿ ಕಾದು ಜೊತೆಯಾಗಿ ನಡೆಯುವೆನು. 
